hello/hello-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-front-deployment
  labels:
    app: hello-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-front
  template:
    metadata:
      labels:
        app: hello-front
    spec:
      containers:
      - name: hello-front
        image: registry.gitlab.com/takima-school/images/simple-website:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
      imagePullSecrets:
      - name: takima-school-registry
