hello/hello-front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-front-service
spec:
  selector:
    app: hello-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
